[package]
name = "rewrk"
version = "0.4.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>", "Programatik <programatik29@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "net", "macros"] }
hyper = { version = "0.14.15", features = ["runtime", "client", "http1", "http2"] }
tower = { version = "0.4.11", features = ["util"] }
rustls = "0.20.2"
tokio-rustls = "0.23.1"
rustls-native-certs = "0.6.1"
clap = "3.0.0-beta.5"
colored = "2"
regex = "1.5.*"
rand = "0.8.4"
serde_json = "1"
http = "0.2.5"
anyhow = "1"
